--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,7 +8,7 @@
   backdrop-filter: blur(10px);
   padding        : 3em 4em;
   border-radius  : 20px;
-  border: solid 1px rgba(95, 95, 95, 0.425);
+  border: solid 1px var(--metal_light);
   pointer-events: none;
 } 
 
@@ -60,20 +60,21 @@
 
 .button.normal {
   color           : #F3F2ED;
-  background-color: #232020b7;
+  background-color: var(--metal);
   border          : 2px solid rgba(243, 242, 237, 0.95);
   box-sizing      : border-box;
 }
 
 .button.play {
-  color           : var(--metal_light);;
-  background-color: #232020;
-  border          : 1px solid var(--metal);
+  color           : var(--gold_light);
+  background-color: var(--metal);
+  border          : 1px solid var(--gold_light);
   box-sizing      : border-box;
 }
 
 .button.play:hover {
-  border: solid 1px var(--metal_light);
+  border: solid 1px var(--gold);
+  color           : var(--gold);
 }
 
 .address {
@@ -91,7 +92,7 @@
 }
 
 .logo_banner {
-  background-image: url('/illustrations/warrior2.webp');
+  background-image: url('/illustrations/warrior.webp');
   background-size: cover;
   background-position: center 0;
   width  : calc(100% + 8em);
@@ -103,7 +104,7 @@
   border-top-left-radius  : 20px;
   border-top-right-radius: 20px;
   --scrollbar-width: 1px;
-  --mask-height: 40px;
+  --mask-height: 70px;
   --mask-image-content: linear-gradient(
     to bottom,
     transparent,
@@ -111,12 +112,22 @@
     black calc(40% - var(--mask-height)),
     transparent
 );
---mask-size-content: calc(100% - var(--scrollbar-width)) 100%;
---mask-image-scrollbar: linear-gradient(black, transparent);
-mask-image: var(--mask-image-content);
-mask-size: var(--mask-size-content), var(--mask-size-scrollbar);
-mask-position: 0 0, 100% 0;
-mask-repeat: no-repeat, no-repeat;
+  --mask-size-content: calc(100% - var(--scrollbar-width)) 100%;
+  --mask-image-scrollbar: linear-gradient(black, transparent);
+  mask-image: var(--mask-image-content);
+  mask-size: var(--mask-size-content), var(--mask-size-scrollbar);
+  mask-position: 0 0, 100% 0;
+  mask-repeat: no-repeat, no-repeat;
+}
+
+.nav .background {
+  position: absolute;
+  background: linear-gradient(90deg, var(--gold_light) 0%, var(--gold) 100%);
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  border-radius  : 20px;
 }
 
 @media (max-width: 536px) {
