--- a/styles/Quests.module.css
+++ b/styles/Quests.module.css
@@ -82,7 +82,7 @@
 
 .quest_point_contener_completed .quest_point {
     border: none;
-    background-color: unset;
+    background-color: rgba(21, 137, 21, 0.581);
     backdrop-filter: var(--menu_filter);
 }
 .quest_point_contener_completed .quest_point_icon {
@@ -207,6 +207,7 @@
 
 .quest_start_button_completed {
     background-color: #384d2c86 !important;
+    color: white !important;
 }
 
 .quest_start_button_locked {
@@ -234,7 +235,7 @@
 }
 
 .player_infos_contener {
-    background-color: #f9e8c8bd;
+    background-color: var(--menu_background);
     padding: 15px;
     border-radius: .4em;
     transform: translate(120px, calc(-100% - 20px));
@@ -247,7 +248,7 @@
     bottom: 0;
     left: 0;
     right: 0;
-    color: var(--gold_light);
+    color: white;
     padding: 5px;
     border-bottom-left-radius: .4em;
     border-bottom-right-radius: .4em;
@@ -267,6 +268,7 @@
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
+    margin-bottom: 15px;
 }
 
 .player_infos_contener button {
