--- a/styles/components/Header.module.css
+++ b/styles/components/Header.module.css
@@ -5,7 +5,7 @@
     width          : 420px;
     height         : 60px;
     border-radius  : 0px 0px 16px 16px;
-    background     : rgba(49, 44, 42, 0.6);
+    background     : var(--menu_background);
     box-shadow     : 0px 0px 150px rgba(0, 0, 0, 0.25);
     backdrop-filter: blur(16px);
     border: solid 1px rgba(73, 73, 73, 0.24);
