--- a/styles/components/Header.module.css
+++ b/styles/components/Header.module.css
@@ -2,7 +2,7 @@
     z-index        : 1;
     position       : fixed;
     left           : calc(50% - 210px);
-    width          : 420px;
+    width          : 380px;
     height         : 60px;
     border-radius  : 0px 0px 16px 16px;
     background     : var(--menu_background);
@@ -43,8 +43,7 @@
 
 .logo {
     cursor: pointer;
-    width : 90px;
-    margin: 4px 30px 0px 4px;
+    margin: 0 10px 0 4px;
 }
 
 .icon {
