--- a/styles/Quests.module.css
+++ b/styles/Quests.module.css
@@ -69,7 +69,7 @@
 }
 
 .quest_point_icon {
-    color: var(--gold);
+    color: var(--metal);
     bottom: 50%;
     transform: translateY(50%);
     width: 30px;
