--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -28,7 +28,8 @@
     right: 10px;
   }
 }
-.button {
+
+.button.play {
   font-family    : Verdana, sans-serif;
   letter-spacing : 0.05em;
   text-align     : left;
@@ -41,12 +42,15 @@
   margin         : 1.5em 1em 0.5em 0.1em;
   padding        : 0.1em 1em 0.1em 14em;
   text-decoration: none;
-  color          : #F3F2ED;
   width          : 100%;
-  height         : 3em;
+  height         : 2.4em;
   position       : relative;
-  border-radius  : 12px;
   pointer-events: auto;
+  color           : white;
+  background-color: var(--gold);
+  border: none;
+  box-sizing      : border-box;
+  border-radius: 2em;
 }
 
 @media (max-width: 536px) {
@@ -58,24 +62,6 @@
   }
 }
 
-.button.normal {
-  color           : #F3F2ED;
-  background-color: var(--metal);
-  border          : 2px solid rgba(243, 242, 237, 0.95);
-  box-sizing      : border-box;
-}
-
-.button.play {
-  color           : var(--gold_light);
-  background-color: var(--metal);
-  border          : 1px solid var(--gold_light);
-  box-sizing      : border-box;
-}
-
-.button.play:hover {
-  border: solid 1px var(--gold);
-  color           : var(--gold);
-}
 
 .address {
   width: 100%;
@@ -122,7 +108,7 @@
 
 .nav .background {
   position: absolute;
-  background: linear-gradient(90deg, var(--gold_light) 0%, var(--gold) 100%);
+  background: linear-gradient(90deg, var(--gold_light) 0%, var(--metal_light) 100%);
   left: 0;
   right: 0;
   top: 0;
@@ -185,10 +171,6 @@
   transform  : translateY(-50%);
 }
 
-.button:hover {
-  border: solid 1px var(--metal_light);
-}
-
 .button_loading {
   position: absolute !important;
   top: 50%;
@@ -211,10 +193,6 @@
   border-radius  : 12px;
   backdrop-filter: blur(10px);
   z-index        : -1;
-}
-
-.button:hover .button_div {
-  border: solid 1px #dddddd;
 }
 
 .loading {
