--- a/styles/components/Loading.module.css
+++ b/styles/components/Loading.module.css
@@ -15,7 +15,7 @@
     width: 7px;
     height: 7px;
     border-radius: 50%;
-    background: #fff;
+    background: var(--gold);
     margin: -4px 0 0 -4px;
   }
   .ldsRoller div:nth-child(1) {
