--- a/styles/components/LoadingScreen.module.css
+++ b/styles/components/LoadingScreen.module.css
@@ -21,7 +21,7 @@
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
   border-radius  : 16px;
-  background     : rgba(49, 44, 42, 0.6);
+  background     : var(--menu_background);
   box-shadow     : 0px 0px 150px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(16px);
   border: solid 1px rgba(73, 73, 73, 0.24);
