--- a/styles/components/WalletMenu.module.css
+++ b/styles/components/WalletMenu.module.css
@@ -13,6 +13,7 @@
     max-width      : 450px;
     display        : flex;
     flex-direction : column;
+    box-shadow: 0px 0px 150px rgba(0, 0, 0, 0.25);
 }
 
 .menu_close {
@@ -20,7 +21,7 @@
     top             : 15px;
     right           : 15px;
     width           : 30px;
-    stroke          : white;
+    stroke          : var(--metal);
     cursor          : pointer;
     transition      : 0.3s;
     background-color: transparent;
@@ -32,43 +33,26 @@
 }
 
 .menu_title {
-    color      : white;
+    color      : var(--metal);
     font-family: Verdana, sans-serif;
     font-size  : 21px;
     font-weight: bold;
-    margin     : 4px;
-}
-
-.menu_text {
-    color      : #F3F2ED;
-    font-family: Verdana, sans-serif;
-    font-size  : 14px;
-    margin     : 14px 5px 18px;
+    margin     : 28px 4px 25px 4px;
+    text-align: center;
 }
 
 .button {
-    text-decoration : none;
-    color           : black;
     background-color: var(--gold);
-    display         : flex;
-    align-items     : center;
     border-radius   : 15px;
-    height          : 40px;
-    margin-left     : 7.5px;
-    margin-top: 10px;
-    border: none;
-    cursor: pointer;
+    padding: 13px 90px !important;
+    display: block;
+    margin: 10px auto;
 }
 
 .button_text {
     font-family: Verdana, sans-serif;
     font-size  : 15px;
     margin-left: 18px;
-}
-
-.button_icon {
-    width      : 24px;
-    margin-left: 12px;
 }
 
 @media (max-width: 820px) {
