--- a/styles/globals.css
+++ b/styles/globals.css
@@ -159,18 +159,18 @@ fieldset.popup button {
 
 .title {
   font-family    : Verdana, sans-serif;
-  color: white;
+  color: var(--gold);
   margin-bottom: 15px;
 } 
 
 .description {
   font-family    : Verdana, sans-serif;
-  color: rgb(228, 228, 228);
+  color: var(--metal);
 }
 
 .popup.title {
   text-align: center;
-} 
+}
 
 .input {
   font-family    : Verdana, sans-serif;
