Adding more quests

--- a/styles/components/quests/questSteps.module.css
+++ b/styles/components/quests/questSteps.module.css
@@ -36,7 +36,7 @@
     pointer-events: auto;
     display: flex;
     justify-content: center;
-    background     : rgb(49, 44, 42);
+    background     : var(--menu_background);
     box-shadow     : var(--menu_shadow);
     border:  var(--menu_border);
     position: absolute;
