--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -4,11 +4,11 @@
   top         : calc(50% - 60px);
   transform: translateX(-50%) translateY(-50%);
   background     : rgba(255, 255, 255, 0.055);
-  box-shadow     : 0px 0px 150px rgba(0, 0, 0, 0.25);
+  box-shadow     : 0px 0px 150px rgba(0, 0, 0, 0.12);
   backdrop-filter: blur(10px);
   padding        : 3em 4em;
   border-radius  : 20px;
-  border: solid 1px var(--metal_light);
+  /*border: solid 1px var(--metal_light);*/
   pointer-events: none;
 } 
 
@@ -40,7 +40,7 @@
   list-style-type: none;
   display        : block;
   margin         : 1.5em 1em 0.5em 0.1em;
-  padding        : 0.1em 1em 0.1em 14em;
+  padding        : 0.1em 1em 0.1em 1em;
   text-decoration: none;
   width          : 100%;
   height         : 2.4em;
@@ -54,11 +54,11 @@
 }
 
 @media (max-width: 536px) {
-  .button {
-    margin        : 0.4em 1em 0.4em 0.0em;
-    padding       : 0.1em 0.4em 0.02em 0em;
+  .button.play {
+    margin         : 1.5em 0 0.5em 0;
+    padding        : 0.1em 0 0.1em 0;
     letter-spacing: 0em;
-    font-size     : 15px;
+    width: 100%;
   }
 }
 
@@ -114,6 +114,7 @@
   top: 0;
   bottom: 0;
   border-radius  : 20px;
+  z-index: -1;
 }
 
 @media (max-width: 536px) {
