--- a/styles/components/quests/completeQuestAnim.module.css
+++ b/styles/components/quests/completeQuestAnim.module.css
@@ -6,7 +6,7 @@
     top: 50%;
     left: 200%;
     backdrop-filter: var(--menu_filter);
-    background-color: var(--menu_background);
+    background-color: var(--gold);
     transition: 1s;
     transform: translateY(-12px) translateX(3px) translate(-50%, -50%);
     animation: nftCard 4s;
