--- a/styles/globals.css
+++ b/styles/globals.css
@@ -59,6 +59,27 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #f1f1f100;
+  border-radius: 2em;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: var(--gold);
+  border-radius: 2em;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: rgb(71, 155, 93);
+}
 
 fieldset {
   border: 1px solid var(--gold_light);
@@ -125,6 +146,8 @@ fieldset.popup button {
 .popup.contener {
   width          : 660px;
   min-height         : 100px;
+  max-height         : calc(100% - 100px);
+  overflow-y         : auto;
   border-radius  : 16px;
   background     : var(--menu_background);
   box-shadow     : 0px 0px 150px rgba(0, 0, 0, 0.25);
