--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -3,13 +3,6 @@
   left           : 50%;
   top         : calc(50% - 60px);
   transform: translateX(-50%) translateY(-50%);
-  background     : rgba(255, 255, 255, 0.055);
-  box-shadow     : 0px 0px 150px rgba(0, 0, 0, 0.12);
-  backdrop-filter: blur(10px);
-  padding        : 3em 4em;
-  border-radius  : 20px;
-  /*border: solid 1px var(--metal_light);*/
-  pointer-events: none;
 } 
 
 @media (max-width: 700px) {
@@ -29,39 +22,101 @@
   }
 }
 
-.button.play {
-  font-family    : Verdana, sans-serif;
-  letter-spacing : 0.05em;
-  text-align     : left;
-  font-style     : normal;
-  font-size      : 20px;
-  line-height    : 62px;
-  cursor         : pointer;
-  list-style-type: none;
-  display        : block;
-  margin         : 1.5em 1em 0.5em 0.1em;
-  padding        : 0.1em 1em 0.1em 1em;
-  text-decoration: none;
-  width          : 100%;
-  height         : 2.4em;
-  position       : relative;
-  pointer-events: auto;
-  color           : white;
-  background-color: var(--gold);
-  border: none;
-  box-sizing      : border-box;
-  border-radius: 2em;
+.nq-button::-moz-focus-inner,
+.nq-button-s::-moz-focus-inner {
+  border: 0;
 }
 
-@media (max-width: 536px) {
-  .button.play {
-    margin         : 1.5em 0 0.5em 0;
-    padding        : 0.1em 0 0.1em 0;
-    letter-spacing: 0em;
-    width: 100%;
+.nq-button {
+  position: relative;
+  height: 3rem;
+  line-height: 2.5rem;
+  color: var(--beige);
+  font-size: 1rem;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 0.094em;
+  border: none;
+  padding: 0 2rem;
+  border-radius: 500px;
+  min-width: 5rem;
+  margin: 0.25rem auto;
+  box-shadow: 0 0.5rem 1.5rem rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+  transition: transform 450ms var(--nimiq-ease),
+    box-shadow 450ms var(--nimiq-ease);
+  will-change: box-shadow;
+  text-decoration: none;
+  display: block;
+  text-align: center;
+}
+
+.nq-button p {
+  font-family: 'Montserrat', sans-serif;
+}
+
+.nq-button:hover,
+.nq-button:focus {
+  box-shadow: 0 1rem 2.5rem rgba(0, 0, 0, 0.2);
+  transform: translate3D(0, -2px, 0);
+}
+
+.nq-button:hover::before,
+.nq-button:active::before,
+.nq-button:focus::before {
+  opacity: 1;
+}
+
+.nq-button:active {
+  outline: none;
+  box-shadow: 0 0.2rem 0.3rem rgba(0, 0, 0, 0.2);
+  transform: translate3D(0, 1px, 0);
+  transition: transform 200ms cubic-bezier(0.41, 0.34, 0.26, 1.55),
+    box-shadow 200ms cubic-bezier(0.41, 0.34, 0.26, 1.55) !important;
+}
+
+/* Color variations */
+
+/* green */
+.nq-button {
+  color: var(--beige-);
+  background: var(--green);
+  background-image: var(--green-bg);
+}
+
+.nq-button::before {
+  background-image: var(--brown);
+}
+
+/* Focus Ring for Tabs – can be optimized in the future with better :focus-visible support */
+
+.nq-button::after {
+  content: "";
+  position: absolute;
+  left: -5px;
+  top: -5px;
+  right: -5px;
+  bottom: -5px;
+  border: 2px solid var(--soft-brown); /* Based on Nimiq Light Blue */
+  border-radius: 500px;
+  opacity: 0;
+}
+
+.nq-button:focus,
+.nq-button-s:focus,
+.nq-button-pill:focus {
+  outline: none;
+}
+
+.nq-button:focus::after {
+  opacity: 1;
+}
+
+@media (max-width: 1024px) {
+  .nq-button {
+    font-size: 0.6rem;
   }
 }
-
 
 .address {
   width: 100%;
@@ -136,40 +191,13 @@
 }
 
 
-.icon {
-  width    : 25px;
-  display  : inline-block;
-  position : absolute;
-  left     : 1.3em;
-  top      : 50%;
-  transform: translateY(-50%);
-}
-
 @media (max-width: 536px) {
-  .icon {
-    width    : 25px;
-    display  : inline-block;
-    position : absolute;
-    left     : 0.8em;
-    top      : 50%;
-    transform: translateY(-50%);
+  .logo_banner {
+    height: 220px;
   }
-
-.logo_banner {
-  height: 220px;
-}
-.nav {
-  padding-bottom : 1.5em;
-}
-}
-
-.button_text {
-  display    : inline-block;
-  margin-left: 1.75em;
-  position   : absolute;
-  left       : 1.3em;
-  top        : 50%;
-  transform  : translateY(-50%);
+  .nav {
+    padding-bottom : 1.5em;
+  }
 }
 
 .button_loading {
