--- a/styles/Quests.module.css
+++ b/styles/Quests.module.css
@@ -248,23 +248,19 @@
 }
 
 .player_infos_contener {
-    background: var(--gold_light);
     padding: 15px;
-    border-radius: .4em;
     transform: translate(120px, calc(-100% - 20px));
     position: relative;
 }
 
 .player_infos_contener p {
-    background-color: rgb(49, 44, 42);
-    position: absolute;
+    background-color: var(--gold_light);
     bottom: 0;
     left: 0;
-    right: 0;
+    border-radius: 2em;
     color: white;
-    padding: 5px;
-    border-bottom-left-radius: .4em;
-    border-bottom-right-radius: .4em;
+    padding: 10px 20px;
+    text-align: center;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -khtml-user-select: none;
@@ -282,23 +278,6 @@
     -ms-user-select: none;
     user-select: none;
     margin-bottom: 15px;
-}
-
-.player_infos_contener button {
-    position: absolute;
-    bottom: 0;
-    right: 3px;
-    border: none;
-    background-color: transparent;
-    padding: 0;
-    margin: 0;
-    cursor: pointer;
-}
-
-.player_infos_contener button img {
-    width: 30px;
-    margin: 0;
-    border-radius: 4em;
 }
 
 .tokensContainer {
