--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,7 +23,8 @@
   --menu_filter: blur(16px);
   --menu_border: solid 1px rgba(73, 73, 73, 0.24);
   --error: rgb(211, 85, 85);
-  --success: #8fcfa0
+  --success: #8fcfa0;
+  --nimiq-ease: cubic-bezier(0.25,0,0,1);
 }
 
 a {
@@ -256,13 +257,19 @@ fieldset.popup button {
   padding        : 0.4em 1em;
   text-align: center;
   text-decoration: none;
-  color          : #F3F2ED;
+  color          : black;
   width          : 100%;
   position       : relative;
   border-radius  : 12px;
   box-sizing      : border-box;
   border: none;
   transition: cubic-bezier(0.075, 0.82, 0.165, 1) 0.2s;
+}
+
+.button svg {
+  width: 1.5em;
+  height: 1.5em;
+  margin-right: 0.5em;
 }
 
 .button.gold {
