--- a/styles/components/Header.module.css
+++ b/styles/components/Header.module.css
@@ -83,7 +83,7 @@
 }
 
 .button_text {
-    font-family   : Verdana, sans-serif;
+    font-family: 'Montserrat', sans-serif;
     letter-spacing: 0.05em;
     font-size     : 16px;
     margin-top    : 30px;
