--- a/styles/components/WalletMenu.module.css
+++ b/styles/components/WalletMenu.module.css
@@ -46,11 +46,11 @@
     padding: 13px 50px !important;
     display: block;
     margin: 10px auto;
-    width: 100% !important;
 }
 
-.button_text {
-
+.button div {
+    width: fit-content;
+    margin: 0 auto;
 }
 
 @media (max-width: 820px) {
