--- a/styles/globals.css
+++ b/styles/globals.css
@@ -208,7 +208,12 @@ fieldset.popup button {
     font-size: 3rem;
   }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 365px) {
+  .title.v2 {
+    font-size: 2.5rem;
+  }
+}
+@media screen and (max-width: 336px) {
   .title.v2 {
     font-size: 2rem;
   }
