--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,18 +1,7 @@
-.header {
-  top            : calc(50% + 92px);
-  transform: translateX(-50%) translateY(-50%);
-  border-radius: 2em;
-  width: 400px;
-}
-
-.header img {
-  display: none;
-}
-
 .nav {
   position       : absolute;
   left           : 50%;
-  top         : calc(50% - 60px);
+  top         : 50%;
   transform: translateX(-50%) translateY(-50%);
 } 
 
