--- a/styles/components/Common.module.css
+++ b/styles/components/Common.module.css
@@ -1,6 +1,13 @@
 .leaves {
     position: fixed;
     width: 300px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    z-index: 2;
 }
 
 .leaves.v1 {
