Implementing new wallet menu

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap');
 
 * {
@@ -407,9 +411,10 @@ fieldset.popup button {
   text-decoration: none;
   display: block;
   text-align: center;
+  font-family: 'Montserrat', sans-serif;
 }
 
-.nq-button p {
+.nq-button * {
   font-family: 'Montserrat', sans-serif;
 }
 
