--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,16 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap');
 
+@font-face {
+  font-family: "Montserrat-ExtraBold";
+  src: url(../public/fonts/montserrat/Montserrat-ExtraBold.ttf);
+}
+
+@font-face {
+  font-family: "Montserrat-Regular";
+  src: url(../public/fonts/montserrat/Montserrat-Regular.ttf);
+}
+
 * {
   margin    : 0;
   padding   : 0;
@@ -194,7 +204,7 @@ fieldset.popup button {
 } 
 
 .title.v2 {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat-ExtraBold";
   font-size: 6rem;
   color: var(--gold);
   text-shadow: 4px 4px var(--gold_light);
@@ -411,11 +421,10 @@ fieldset.popup button {
   text-decoration: none;
   display: block;
   text-align: center;
-  font-family: 'Montserrat', sans-serif;
 }
 
 .nq-button * {
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat-ExtraBold";
 }
 
 .nq-button:hover,
