--- a/styles/components/Common.module.css
+++ b/styles/components/Common.module.css
@@ -1,32 +1,49 @@
 .leaves {
-    position: fixed;
-    width: 300px;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    z-index: -1;
+  position: fixed;
+  width: 200px;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  z-index: -1;
+  /*animation: leaves 10s ease-in-out infinite;*/
 }
 
 .leaves.v1 {
-    bottom: 0;
-    right: 0;
+  bottom: -260px;
+  right: -100px;
+  transform: scaleY(0.9);
 }
 
 .leaves.v2 {
-    bottom: 0;
-    left: 0;
+  bottom: -200px;
+  left: -100px;
+  width: 250px;
 }
 
 .leaves.v3 {
-    top: 0;
-    left: 0;
+  top: 0;
+  left: 0;
 }
 
 @media screen and (max-width: 700px) {
-    .leaves {
-        display: none;
-    }
+  .leaves {
+    display: none;
+  }
+}
+
+/* Animate like if there was wind */
+
+@keyframes leaves {
+  0% {
+    transform: translateX(0) rotate(0) scaleX(1) scaleY(0.9);
+  }
+  50% {
+    transform: translateX(10px) rotate(5deg) scaleX(1.05) scaleY(1.02);
+  }
+  100% {
+    transform: translateX(0) rotate(0) scaleX(1) scaleY(0.9);
+  }
 }
