--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,8 +1,8 @@
-@import 'tailwindcss/base';
+@import "tailwindcss/base";
 @tailwind components;
 @tailwind utilities;
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap");
 
 @font-face {
   font-family: "Montserrat-ExtraBold";
@@ -15,30 +15,30 @@
 }
 
 * {
-  margin    : 0;
-  padding   : 0;
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
-  font-family    : Verdana, sans-serif;
-  -webkit-user-drag: none; 
-  -khtml-user-drag: none; 
-  -moz-user-drag: none; 
-  -o-user-drag: none; 
-  user-drag: none; 
+  font-family: Verdana, sans-serif;
+  -webkit-user-drag: none;
+  -khtml-user-drag: none;
+  -moz-user-drag: none;
+  -o-user-drag: none;
+  user-drag: none;
 }
 
 :root {
-  --metal : #402d28;
-  --metal_light : rgb(204, 203, 203);
-  --metal_dark : rgb(36, 35, 31);
+  --metal: #402d28;
+  --metal_light: rgb(204, 203, 203);
+  --metal_dark: rgb(36, 35, 31);
   --gold: #19aa6e;
   --gold_light: #bf9e7b;
-  --menu_background     : #fff9f0;
-  --menu_shadow     : 0px 0px 150px rgba(0, 0, 0, 0.25);
+  --menu_background: #fff9f0;
+  --menu_shadow: 0px 0px 150px rgba(0, 0, 0, 0.25);
   --menu_filter: blur(16px);
   --menu_border: solid 1px rgba(73, 73, 73, 0.24);
   --error: rgb(211, 85, 85);
   --success: #8fcfa0;
-  --nimiq-ease: cubic-bezier(0.25,0,0,1);
+  --nimiq-ease: cubic-bezier(0.25, 0, 0, 1);
 }
 
 a {
@@ -64,13 +64,13 @@ button * {
   text-decoration: underline;
 }
 
-.link *  {
+.link * {
   cursor: pointer !important;
 }
 
 body {
-  margin                 : 0;
-  -webkit-font-smoothing : antialiased;
+  margin: 0;
+  -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
@@ -110,15 +110,16 @@ fieldset legend {
   color: white;
 }
 
-fieldset.popup, .popup legend {
-  background     : rgba(49, 44, 42, 0.6);
-  box-shadow     : 0px 0px 150px rgba(0, 0, 0, 0.25);
+fieldset.popup,
+.popup legend {
+  background: rgba(49, 44, 42, 0.6);
+  box-shadow: 0px 0px 150px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(16px);
   border: solid 1px rgba(73, 73, 73, 0.24);
 }
 
 .popup legend {
-  background     : rgb(49, 44, 42);
+  background: rgb(49, 44, 42);
 }
 
 fieldset.popup {
@@ -144,14 +145,14 @@ fieldset.popup button {
 }
 
 .default_background {
-  display              : block;
-  overflow             : auto;
-  position             : absolute;
-  top                  : 0;
-  bottom               : 0;
-  left                 : 0;
-  right                : 0;
-  z-index              : -1;
+  display: block;
+  overflow: auto;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  z-index: -1;
 }
 
 .default_background_color {
@@ -159,13 +160,13 @@ fieldset.popup button {
 }
 
 .popup.contener {
-  width          : 660px;
-  min-height         : 100px;
-  max-height         : calc(100% - 100px);
-  overflow-y         : auto;
-  border-radius  : 16px;
-  background     : var(--menu_background);
-  box-shadow     : 0px 0px 150px rgba(0, 0, 0, 0.25);
+  width: 660px;
+  min-height: 100px;
+  max-height: calc(100% - 100px);
+  overflow-y: auto;
+  border-radius: 16px;
+  background: var(--menu_background);
+  box-shadow: 0px 0px 150px rgba(0, 0, 0, 0.25);
   backdrop-filter: blur(16px);
   border: solid 1px rgba(73, 73, 73, 0.24);
   max-width: calc(100% - 20px);
@@ -188,13 +189,13 @@ fieldset.popup button {
 }
 
 .popup.background {
-  display              : block;
-  position             : absolute;
-  top                  : 0;
-  bottom               : 0;
-  left                 : 0;
-  right                : 0;
-  background     : rgba(49, 44, 42, 0.6);
+  display: block;
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: rgba(49, 44, 42, 0.6);
 }
 
 .title {
@@ -202,7 +203,7 @@ fieldset.popup button {
   color: var(--gold);
   margin-bottom: 15px;
   font-size: 2rem;
-} 
+}
 
 .title.v2 {
   font-family: "Montserrat-ExtraBold";
@@ -235,7 +236,7 @@ fieldset.popup button {
 }
 
 .description {
-  font-family    : Verdana, sans-serif;
+  font-family: Verdana, sans-serif;
   color: var(--metal);
 }
 
@@ -244,44 +245,44 @@ fieldset.popup button {
 }
 
 .input {
-  font-family    : Verdana, sans-serif;
-  letter-spacing : 0.05em;
-  text-align     : left;
-  font-style     : normal;
-  font-size      : 20px;
+  font-family: Verdana, sans-serif;
+  letter-spacing: 0.05em;
+  text-align: left;
+  font-style: normal;
+  font-size: 20px;
   list-style-type: none;
-  display        : block;
-  margin         : 1.5em 1em 0.5em 0.1em;
-  padding        : 0.4em 1em;
+  display: block;
+  margin: 1.5em 1em 0.5em 0.1em;
+  padding: 0.4em 1em;
   text-align: center;
   text-decoration: none;
-  color          : #F3F2ED;
-  width          : 100%;
-  position       : relative;
-  border-radius  : 2px;
+  color: #f3f2ed;
+  width: 100%;
+  position: relative;
+  border-radius: 2px;
   background-color: #232020b7;
-  border          : 1px solid rgba(243, 242, 237, 0.95);
-  box-sizing      : border-box;
+  border: 1px solid rgba(243, 242, 237, 0.95);
+  box-sizing: border-box;
 }
 
 .button {
-  font-family    : Verdana, sans-serif;
-  letter-spacing : 0.05em;
-  text-align     : left;
-  font-style     : normal;
-  font-size      : 20px;
-  cursor         : pointer;
+  font-family: Verdana, sans-serif;
+  letter-spacing: 0.05em;
+  text-align: left;
+  font-style: normal;
+  font-size: 20px;
+  cursor: pointer;
   list-style-type: none;
-  display        : block;
-  margin         : 1.5em 1em 0.5em 0.1em;
-  padding        : 0.4em 1em;
+  display: block;
+  margin: 1.5em 1em 0.5em 0.1em;
+  padding: 0.4em 1em;
   text-align: center;
   text-decoration: none;
-  color          : black;
-  width          : 100%;
-  position       : relative;
-  border-radius  : 12px;
-  box-sizing      : border-box;
+  color: black;
+  width: 100%;
+  position: relative;
+  border-radius: 12px;
+  box-sizing: border-box;
   border: none;
   transition: cubic-bezier(0.075, 0.82, 0.165, 1) 0.2s;
 }
@@ -296,8 +297,8 @@ fieldset.popup button {
   border: none;
   color: rgb(61, 61, 61);
   width: fit-content;
-  padding        : 0.4em 2em;
-  border-radius  : 2em;
+  padding: 0.4em 2em;
+  border-radius: 2em;
   font-size: 0.9em;
 }
 
@@ -306,19 +307,19 @@ fieldset.popup button {
   color: white;
   background-color: var(--gold);
   width: fit-content;
-  padding        : 0.4em 2em;
-  border-radius  : 2em;
+  padding: 0.4em 2em;
+  border-radius: 2em;
   font-size: 0.9em;
 }
 
 .button.gold.big {
-  padding        : 0.8em 2em;
-  font-size  : 15px;
+  padding: 0.8em 2em;
+  font-size: 15px;
 }
 
 .button.gold.big * {
   font-weight: bold;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   letter-spacing: 1px;
 }
 
@@ -333,7 +334,7 @@ fieldset.popup button {
 }
 
 .button.gold.normal {
-  margin:  5px 20px;
+  margin: 5px 20px;
 }
 
 .popup.description {
@@ -493,4 +494,25 @@ fieldset.popup button {
 
 .no-anim {
   animation: none !important;
+}
+
+div.the-end {
+  position: fixed;
+  background-color: var(--menu_background);
+  bottom: 0;
+  left: 0;
+  right: 0;
+  top: 0;
+  z-index: 100;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+h1.the-end {
+  font-size: 3em;
+  font-weight: bold;
+  color: var(--gold);
+  text-align: center;
+  margin: 0;
 }
